Implemented ability to remove a friend
