# src/main/java/be/howest/ti/mars/webserver/WebServer.java
@@ -142,6 +142,7 @@ public class WebServer extends AbstractVerticle {
         addRouteWithCtxFunction(factory, "logout", bridge::logout);
         addRouteWithCtxFunction(factory, "viewFriends", bridge::viewFriends);
         addRouteWithCtxFunction(factory, "addFriend", bridge::addFriend);
+        addRouteWithCtxFunction(factory, "removeFriend", bridge::removeFriend);
 
     }
 
